Issue #1189 : Statistic page redesign
 * Statistic page totally redesign, replace by a single graphic which display for last hours, days, months and years
 * Add Chart.js plugin for graphic representation
 * Add Moment.js plugin for time operations

--- a/admin/themes/default/theme.css
+++ b/admin/themes/default/theme.css
@@ -248,10 +248,43 @@ TABLE.doubleSelect SELECT.categoryList {
 	width: 100%; max-width: 100%; overflow-x: auto;
 }
 
-.statBar {
-	height: 10px;
-	background-color: #ff7700;
-	border: 1px solid #666;
+.stat-legend-container {
+  display: inline-block;
+}
+
+.stat-data-selector {
+  border-radius: 10px;
+  display: flex;
+  overflow: hidden;
+  font-weight: bold;
+}
+
+.stat-data-selector label {
+  color: black;
+  padding: 10px;
+  background-color: #eee;
+  transition: 0.2s ease;
+}
+
+.stat-data-selector label:hover {
+  background-color: #ccc
+}
+
+.stat-data-selector input:checked + label {
+  background-color: #FFA646;
+  color: white;
+}
+
+.stat-data-selector input{
+  display: none;
+}
+
+.stat-graph-container {
+  margin: auto;
+  position: relative;
+  width: 80%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .over{
